# VRP-Algorithms

./: README.md  convert_data_to_csv.py  pyproject.toml
datasets/large/: vpr701_27_1.csv  vpr701_27_1.json  vpr701_32_1.csv  vpr701_32_1.json  vpr701_35_2.csv  vpr701_35_2.json  vpr801_27_2.csv  vpr801_27_2.json  vpr801_28_1.csv  vpr801_28_1.json  vpr801_36_1.csv  vpr801_36_1.json  vpr801_36_2.csv  vpr801_36_2.json  vpr901_33_1.csv  vpr901_33_1.json  vpr901_35_2.csv  vpr901_35_2.json  vpr901_41_1.csv  vpr901_41_1.json  vpr901_43_2.csv  vpr901_43_2.json
datasets/medium/: vpr301_10_2.csv  vpr301_10_2.json  vpr301_11_1.csv  vpr301_11_1.json  vpr301_14_2.csv  vpr301_14_2.json  vpr401_14_2.csv  vpr401_14_2.json  vpr401_15_1.csv  vpr401_15_1.json  vpr401_16_1.csv  vpr401_16_1.json  vpr401_16_2.csv  vpr401_16_2.json  vpr501_17_2.csv  vpr501_17_2.json  vpr501_21_1.csv  vpr501_21_1.json  vpr501_22_1.csv  vpr501_22_1.json
datasets/small/: vpr101_3_1.csv  vpr101_3_1.json  vpr101_3_2.csv  vpr101_3_2.json  vpr101_4_2.csv  vpr101_4_2.json  vpr101_5_1.csv  vpr101_5_1.json  vpr151_7_1.csv  vpr151_7_1.json  vpr151_7_2.csv  vpr151_7_2.json  vpr201_7_1.csv  vpr201_7_1.json  vpr201_7_2.csv  vpr201_7_2.json  vpr201_8_1.csv  vpr201_8_1.json  vpr201_9_2.csv  vpr201_9_2.json  vpr51_2_1.csv  vpr51_2_1.json  vpr51_2_2.csv  vpr51_2_2.json
datasets/test/: vpr201_7_1.csv  vpr201_7_1.json  vpr201_7_3.csv  vpr201_7_3.json  vpr201_8_2.csv  vpr201_8_2.json  vpr301_11_1.csv  vpr301_11_1.json  vpr301_11_2.csv  vpr301_11_2.json  vpr301_11_3.csv  vpr301_11_3.json  vpr401_13_2.csv  (+5 more)
src/: main.py
(+349 files in other folders)
