[tool.poetry]
name = "vrp-algorithms"
version = "0.1.0"
description = "Algorithms to solve VRP problems"
authors = ["Robert Kozak <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
tsplib95 = "^0.7.1"
logger = "^1.4"
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"